--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "@types/jquery": "^3.5.1",
+    "ag-grid-angular": "^23.2.1",
+    "ag-grid-community": "^23.2.1",
+    "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "rxjs": "~6.5.4",
     "save": "^2.4.0",
