--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "firstProject": {
+    "cms": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/firstProject",
+            "outputPath": "dist/cms",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -65,18 +65,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "firstProject:build"
+            "browserTarget": "cms:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "firstProject:build:production"
+              "browserTarget": "cms:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "firstProject:build"
+            "browserTarget": "cms:build"
           }
         },
         "test": {
@@ -113,18 +113,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "firstProject:serve"
+            "devServerTarget": "cms:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "firstProject:serve:production"
+              "devServerTarget": "cms:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "firstProject",
+  "defaultProject": "cms",
   "cli": {
     "analytics": "73ee21a1-0e76-451f-bac5-4b3846d15e48"
   }
