--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "@ng-select/ng-select": "^5.0.0",
+    "@ngx-translate/core": "^13.0.0",
     "@syncfusion/ej2-angular-inputs": "^18.2.48",
     "@types/jquery": "^3.5.1",
     "ag-grid-angular": "^23.2.1",
