kritika last commit

--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,11 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [
-              "src/app/check.js",
+              "src/assets/js/check.js",
               "node_modules/jquery/dist/jquery.min.js"
             ]
           },
